--- a/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v3/templates/runtime.ts.j2
@@ -100,6 +100,8 @@ class Session {
 
   private wss: WebSocket.Server
   private roleToSocket: RoleToSocket
+
+  // FIXME: this can be asynchronous! Handle accordingly
   private cancellation: (role: Roles.All, reason?: any) => void
   
   private initialState: Implementation.S{{ endpoint.efsm.initial_state.id }}
