Convert some type aliases to interfaces

--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/receive_component.tsx.j2
@@ -31,7 +31,7 @@ enum Labels {
 }
 
 {% for action in state.actions -%}
-type {{ action.label }}Message = {
+interface {{ action.label }}Message {
   label: Labels.{{ action.label }},
   payload: [{{ action.payloads|join(', ') }}],
 };
