Minor fixes for meeting with Roland

--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/runtime.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/runtime.tsx.j2
@@ -226,7 +226,9 @@ class {{ endpoint.role }} extends React.Component<Props & Transport, ComponentSt
             }
           };
 
-          return <div {...props}>{this.props.children}</div>;
+          return React.Children.map(this.props.children, child => (
+              React.cloneElement(child as React.ReactElement, props)
+          ));
         }
       }
     }
