Re-export browser APIs

--- a/mpst_ts/codegen/generator/node/node_v4/templates/cancellation.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v4/templates/cancellation.ts.j2
@@ -1,10 +1,6 @@
-import {
-  Role,
-} from "./EFSM";
+import { Role } from "./EFSM";
 
-import {
-  MaybePromise,
-} from "./Utility";
+import { MaybePromise } from "./Utility";
 
 export enum Receive {
   NORMAL = 1000,
