--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/send_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/send_component.tsx.j2
@@ -25,6 +25,13 @@ type Props = {
   factory: SendComponentFactoryFactory
 }
 
+/**
+ * __Sends to  {{ state.role }}.__ Possible messages:
+ *
+ {% for action in state.actions -%}
+ * * __{{ action.label }}__({{ action.payloads|join(', ') }})
+ {% endfor -%}
+ */
 export default abstract class S{{ state }}<ComponentState = {}> extends React.Component<Props, ComponentState>
 {
 
