--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/terminal_component.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/terminal_component.tsx.j2
@@ -8,6 +8,9 @@ type Props = {
   terminate: () => void,
 };
 
+/**
+ * __Terminal state__.
+ */
 export default abstract class S{{ state }}<ComponentState = {}> extends React.Component<Props, ComponentState> {
 
   componentDidMount() {
