--- a/mpst_ts/codegen/generator/node/node_v4/templates/index.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v4/templates/index.ts.j2
@@ -1,2 +1,8 @@
-export { Factory as Session } from "./EFSM";
-export { {{ endpoint.role }} } from "./Runtime";
+export {
+  Factory as Session,
+  Role,
+} from "./EFSM";
+
+export {
+  {{ endpoint.role }},
+} from "./Runtime";
