Fix bug with missing roles forr endpoints that purely use routed comms

--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/runtime.tsx.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/runtime.tsx.j2
@@ -93,12 +93,12 @@ class {{ endpoint.role }} extends React.Component<Props & Transport, ComponentSt
 
     // Set up message and handler queues
     this.messageQueue = {
-      {% for role in endpoint.efsm.other_roles -%}
+      {% for role in endpoint.other_roles -%}
       [Roles.Peers.{{ role }}]: [],
       {%- endfor %}
     };
     this.handlerQueue = {
-      {% for role in endpoint.efsm.other_roles -%}
+      {% for role in endpoint.other_roles -%}
       [Roles.Peers.{{ role }}]: [],
       {%- endfor %}
     };
