--- a/mpst_ts/codegen/generator/browser/browser_v2/templates/roles.ts.j2
+++ b/mpst_ts/codegen/generator/browser/browser_v2/templates/roles.ts.j2
@@ -1,7 +1,7 @@
 // Roles.ts
 
 export enum Peers {
-  {% for role in endpoint.efsm.other_roles -%}
+  {% for role in endpoint.other_roles -%}
   {{ role }} = "{{ role }}",
   {%- endfor %}
 };
