--- a/mpst_ts/codegen/generator/node/node_v4/templates/efsm.ts.j2
+++ b/mpst_ts/codegen/generator/node/node_v4/templates/efsm.ts.j2
@@ -26,7 +26,7 @@ export namespace Role
   export const Self: Self = "{{ endpoint.role }}";
 
   export enum Peers {
-    {% for role in endpoint.efsm.other_roles -%}
+    {% for role in endpoint.other_roles -%}
     {{ role }} = "{{ role }}",
     {%- endfor %}
   };
