--- a/codegen/generator/node/templates/runtime.ts.j2
+++ b/codegen/generator/node/templates/runtime.ts.j2
@@ -20,7 +20,6 @@ export type SendStateHandler = (role: Role.Peers, label: string, payload: any[])
 export type MessageHandler = (payload: any) => void;
 export type ReceiveStateHandler = (from: Role.Peers, messageHandler: MessageHandler) => void;
 
-
 // ===============
 // WebSocket Types
 // ===============
@@ -34,6 +33,8 @@ interface WebSocketMessage {
   type: string
   target: WebSocket
 };
+
+type ConnectionContext = [Set<Role.Peers>, Partial<RoleToSocket>, Map<WebSocket, Role.Peers>];
 
 // ================
 // Connection Phase
@@ -49,6 +50,23 @@ namespace Connect {
   };
 };
 
+// Factory function to create a new connection context to keep track
+// of pending connections before instantiating a session.
+const makeNewContext = (): ConnectionContext => {
+  // Keep track of participants that have yet to join.
+  const waiting: Set<Role.Peers> = new Set([{% for role in endpoint.other_roles %}Role.Peers.{{ role ~ (',' if not loop.last else '') }}{% endfor %}]);
+
+  // Keep track of mapping between role and WebSocket.
+  const roleToSocket: Partial<RoleToSocket> = {
+    {% for role in endpoint.other_roles -%}
+    [Role.Peers.{{ role }}]: undefined,
+    {%- endfor %}
+  };
+  const socketToRole = new Map<WebSocket, Role.Peers>();
+
+  return [waiting, roleToSocket, socketToRole];
+};
+
 export class {{ endpoint.role }}
 {
   constructor(wss: WebSocket.Server,
@@ -56,23 +74,22 @@ export class {{ endpoint.role }}
               initialise: StateInitialiser<string>,
               generateID: () => string = uuidv1)
   {
-    // Keep track of participants that have yet to join.
-    const waiting: Set<Role.Peers> = new Set([{% for role in endpoint.other_roles %}Role.Peers.{{ role ~ (',' if not loop.last else '') }}{% endfor %}]);
-
-    // Keep track of mapping between role and WebSocket.
-    const roleToSocket: Partial<RoleToSocket> = {
-      {% for role in endpoint.other_roles -%}
-      [Role.Peers.{{ role }}]: undefined,
-      {%- endfor %}
-    };
-    const socketToRole = new Map<WebSocket, Role.Peers>();
+    let connectionContexts: ConnectionContext[] = [
+      makeNewContext(),
+    ];
 
     // Handle explicit cancellation during the join phase.
     const onClose = ({ target: socket }: WebSocket.CloseEvent) => {
       socket.removeAllListeners();
 
       // Wait for the role again - guaranteed to occur in map by construction.
-      waiting.add(socketToRole.get(socket) as Role.Peers);
+      for (const [waiting, _, socketToRole] of connectionContexts) {
+        const role = socketToRole.get(socket);
+        if (role !== undefined) {
+            waiting.add(role);
+            return;
+        }
+      }
     }
 
     // Handle connection invitation message from participant.
@@ -80,43 +97,46 @@ export class {{ endpoint.role }}
       const { data, target: socket } = event;
       const { connect: role } = Message.deserialise<Connect.Request>(data);
 
-      const roleAlreadyOccupied = !waiting.has(role);
-      if (roleAlreadyOccupied) {
-        // Remove listeners, as all events are irrelevant now.
-        socket.removeAllListeners();
+      for (let i = 0; i < connectionContexts.length; ++i) {
+        const [waiting, roleToSocket, socketToRole] = connectionContexts[i];
+        if (waiting.has(role)) {
+          // Update role-WebSocket mapping.
+          roleToSocket[role] = socket;
+          socketToRole.set(socket, role);
+          waiting.delete(role);
 
-        // Inform participant of unsuccessful join and cancel.
-        socket.close(Cancellation.Emit.ROLE_OCCUPIED);
-        return;
+          if (waiting.size === 0) {
+            connectionContexts = connectionContexts.filter((_, j) => j !== i);
+            
+            // Execute protocol when all participants have joined.
+            new Session(
+                generateID(),
+                wss,
+                roleToSocket as RoleToSocket,
+                cancellation,
+                initialise
+            );
+
+            if (connectionContexts.length === 0) {
+              connectionContexts.push(makeNewContext());
+            }
+          }
+          return;
+        }
       }
+
+      // Role occupied in all existing connection contexts;
+      // Create new connection context.
+      const context = makeNewContext();
+      const [waiting, roleToSocket, socketToRole] = context;
 
       // Update role-WebSocket mapping.
       roleToSocket[role] = socket;
       socketToRole.set(socket, role);
       waiting.delete(role);
 
-      if (waiting.size === 0) {
-        // Execute protocol when all participants have joined.
-        new Session(
-          generateID(),
-          wss,
-          roleToSocket as RoleToSocket,
-          cancellation,
-          initialise
-        );
-
-        // Listen for another session.
-        new {{ endpoint.role }}(
-          wss,
-          cancellation,
-          initialise,
-          generateID,
-        );
-      }
+      connectionContexts.push(context);
     }
-
-    // Remove previous connection listeners.
-    wss.removeAllListeners();
 
     // Bind event listeners for every new connection.
     wss.addListener('connection', (ws: WebSocket) => {
