--- a/codegen/generator/browser/templates/runtime.tsx.j2
+++ b/codegen/generator/browser/templates/runtime.tsx.j2
@@ -296,8 +296,8 @@ class {{ endpoint.role }} extends React.Component<Props & Transport, ComponentSt
         this.cancel(error);
       }
     } else {
-      // No handler registered -- `queue' message.
-      this.messageQueue[message.role].push(message);
+      // No handler registered -- `queue' unparsed message data.
+      this.messageQueue[message.role].push(data);
     }
   }
   private terminate() {
